--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "enquiry-management",
   "version": "0.1.0",
+  "homepage": "https://enquirymanagement.onrender.com",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
